remove Route abstract class and have routes implement RouteHandler directly